@@ -19,9 +19,9 @@ isostasy = 0
 sliding_law = 4
 marine_margin = 2
 stress_calc = 2
-evolution = 2
+evolution = 0
 basal_water = 2
-vertical_integration = 0
+vertical_integration = 1
 
 [time]
 tend = 200000.
@@ -36,10 +36,10 @@ geothermal = -42e-3
 
 [default]
 title: EISMINT-1 fixed margin (time-dependent)
-comment: forcing period 20000a
+comment: forcing period 20000a, forced upper kinematic BC
 
 [output]
 name: e1-fm.2.nc
 frequency: 1000
-variables: thk uflx vflx bmlt temp uvel vvel wvel
+variables: thk uflx vflx bmlt temp uvel vvel wvel diffu acab
 
