@@ -17,8 +17,9 @@ isostasy = 0
 sliding_law = 4
 marine_margin = 2
 stress_calc = 2
-evolution = 2
+evolution = 0
 basal_water = 0
+vertical_integration = 1
 
 [time]
 tend = 200000.
@@ -33,11 +34,12 @@ geothermal = -42e-3
 
 [default]
 title: EISMINT-2 Exp A
+comment: forced upper kinematic BC
 
 [output]
 name: e2.a.nc
 frequency: 1000
-variables: thk uflx vflx bmlt temp uvel vvel wvel wgrd
+variables: thk bmlt temp uvel vvel wvel wgrd acab diffu
 
 [output]
 name: e2.a.hot.nc
