@@ -18,9 +18,10 @@ isostasy = 0
 sliding_law = 4
 marine_margin = 2
 stress_calc = 2
-evolution = 2
+evolution = 0
 basal_water = 0
 hotstart = 1
+vertical_integration = 1
 
 [time]
 tstart = 200000.
@@ -36,11 +37,12 @@ geothermal = -42e-3
 
 [default]
 title: EISMINT-2 Exp L
+comment: forced upper kinematic BC
 
 [output]
 name: e2.l.nc
 frequency: 1000
-variables: topg thk uflx vflx bmlt temp uvel vvel wvel wgrd
+variables: topg thk bmlt temp uvel vvel wvel wgrd acab diffu
 
 [input]
 name: e2.k.hot.nc
