@@ -25,7 +25,7 @@ sliding_law = 0
 slip_coeff = 2
 marine_margin = 3
 stress_calc = 2
-evolution = 2
+evolution = 0
 topo_is_relaxed = 1
 basal_water = 0
 vertical_integration = 1
