@@ -1,7 +1,6 @@
 # configuration for the EISMINT-2 test-case
 
 [EISMINT-2]
-massbalance = 0.25 1.05e-5 425.0e3
 
 [grid]
 # grid sizes
@@ -15,17 +14,16 @@ dns = 25000
 temperature = 1
 flow_law = 0
 isostasy = 0
-sliding_law = 4
 marine_margin = 2
 stress_calc = 2
 evolution = 0
 basal_water = 0
-hotstart = 1
+slip_coeff = 2
+sliding_law = 0
 vertical_integration = 1
 
 [time]
-tstart = 200000.
-tend   = 400000.
+tend = 50000.
 dt = 5.
 ntem = 1.
 nvel = 1.
@@ -34,16 +32,14 @@ niso = 1.
 [parameters]
 flow_factor = 1
 geothermal = -42e-3
+basal_tract_const = 1.e-3
 
 [default]
-title: EISMINT-2 Exp C
-comment: forced upper kinematic BC
+title: linear, dt=5a
+comment: EISMINT-2 Exp H, forced upper kinematic BC
 
 [output]
-name: e2.c.nc
+name: l-5a.nc
 frequency: 1000
-variables: thk bmlt temp uvel vvel wvel wgrd acab diffu
+variables: thk bmlt temp uvel vvel wvel bwat
 
-[input]
-name: e2.a.hot.nc
-time: 2
